--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ main{
 }
 
 
-@media screen and (min-width:480px) {
+@media screen and (max-width:480px) {
     main{
         margin: auto;
     }    
