--- a/style.css
+++ b/style.css
@@ -91,10 +91,25 @@ main{
 @media screen and (max-width:576px) {
     main{
         margin: auto;
+        width: 100%;
     }
     .container{
         flex-direction: column;
-    }    
+        gap: 15px;
+    }   
+    .container .progress h3{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: 1.5rem;
+        z-index: 1;
+        font-weight: 500;
+    } 
+    .container .progress h3 span{
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
     #solidity{
         color: purple;
     }
