--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ main{
         margin: auto;
         width: 100%;
     }
+    #headLine h3{
+         text-align: center;
+         font-size: 1rem;
+    }
     .container{
         flex-direction: column;
         gap: 15px;
